--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.removeAbandoned=true
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url: jdbc:postgresql://localhost:5432/CandyFactory?currentSchema=public&user=username&password=myran
+spring.datasource.url: jdbc:postgresql://localhost:5432/CandyFactory?currentSchema=public&user=postgres&password=myran
 spring.datasource.username: postgres
 spring.datasource.password: myran
