--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.removeAbandoned=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url: jdbc:postgresql://localhost:5432/${db.source}
-spring.datasource.username: postgres
-spring.datasource.password:${db.password}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
